Added LESS, removed zip and Treehouse

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1,30 +1,2 @@
-/* Foundation v2.1.5 http://foundation.zurb.com */
-/* Artfully masterminded by ZURB  */
-
-/* -------------------------------------------------- 
-   Table of Contents
------------------------------------------------------
-:: Shared Styles
-:: Page Name 1
-:: Page Name 2
-*/
-
-
-/* -----------------------------------------
-   Shared Styles
------------------------------------------ */
-
-
-
-/* -----------------------------------------
-   Page Name 1
------------------------------------------ */
-
-
-
-
-/* -----------------------------------------
-   Page Name 2
------------------------------------------ */
-
-
+/* This beautiful CSS-File has been crafted with LESS (lesscss.org) and compiled by simpLESS (wearekiss.com/simpless) */
+html{overflow-y:scroll}body{font-family:'Open Sans',"Helvetica Neue","HelveticaNeue",Helvetica,Arial,"Lucida Grande",sans-serif;color:#444;text-shadow:#fff 1px 1px 1px;font-size:16px;font-size:1.6rem;line-height:1.5}pre,code{white-space:pre;white-space:pre-wrap;white-space:pre-line;word-wrap:break-word}p{font-size:16px;font-size:1.6rem;line-height:1.5;margin:0 0 18px}a{color:#8eac49;cursor:pointer;display:inline-block}a:hover{color:#6f8738}a:focus{color:#000}h1,h2,h3,h4,h5,h6{color:#000}h1{font-size:38px;font-size:3.8rem;margin-bottom:10px}h2{font-size:28px;font-size:2.8rem;margin-bottom:9px}h3{font-size:26px;font-size:2.6rem;margin-bottom:8px}h4{font-size:20px;font-size:2rem;margin-bottom:8px}h5{font-size:18px;font-size:1.8rem;margin-bottom:8px}h6{font-size:15px;font-size:1.5rem;margin-bottom:8px}
